--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 PORT=5000
-MONGO_URI=
+MONGO_URI=mongodb+srv://hosny123:hosny123@cluster0.cudab7o.mongodb.net/ProShop?retryWrites=true&w=majority
